* Version 0.5.0

- Make backend configurable, support Ollama.

* Version 0.4.1

- Bug fixes.

* Version 0.4.0

- Support ~codellama/CodeLlama-13b-hf~.

- Obsolete ~starhugger-stop-token~ in favor of ~starhugger-stop-tokens~.

* Version 0.3.1

- Add ~starhugger-goto-suggestion~

* Version 0.3.0

- Remove both ~starhugger-number-of-suggestions-to-fetch-interactively~ and ~starhugger-number-of-suggestions-to-fetch-automatically~ in favor of ~starhugger-numbers-of-suggestions-to-fetch~ which is a list of numbers.

- Remove ~starhugger-complete~, ~starhugger-complete*~, ~starhugger-query~.

- Introduce ~starhugger-send~.

* Version 0.2.1

- Introduce ~starhugger-enable-dumb-grep-context~.

* Version 0.2.0

- Remove ~starhugger-toggle-debug~.

* Version 0.1.19

- Remove ~starhugger-hexify-request-data~.

- Support ~starhugger-api-token~ being a function.

* Version 0.1.18

- Auto mode: also trigger on deletions, but show cached only; now always dismiss on deletions, but thanks to cache no request are made when re-inserting.

- Deprecate ~starhugger-at-suggestion-map~ in favor of ~starhugger-inline-menu-item~.

- Rename ~starhugger-suggestion-face~ to ~starhugger-inline-suggestion-face~, ~starhugger-active-suggestion-mode~ to ~starhugger-inlining-mode~.

* Version 0.1.17

- Introduce ~starhugger-trim-spaces-around-prompt~.

- Rename ~starhugger-suggestion-beg-map~ to ~starhugger-at-suggestion-map~.

* Version 0.1.16

- Rename ~starhugger-toggle-debugging~ -> ~starhugger-toggle-debug~.

- Rename ~starhugger-high-number-of-suggestions-to-fetch~ -> ~starhugger-number-of-suggestions-to-fetch-interactively~, ~starhugger-low-number-of-suggestions-to-fetch~ -> ~starhugger-number-of-suggestions-to-fetch-non-automatically~.

* Version 0.1.15

- Support fill in the middle mode.

* Version 0.1.14

- Rename ~starhugger-end-token~ -> ~starhugger-stop-token~, ~starhugger-strip-end-token~ -> ~starhugger-chop-stop-token~; like [[https://github.com/huggingface/huggingface-vscode]].
